<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="expense">expense</string>
    <string name="graph">Graph</string>
    <string name="income">income</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="category">category</string>
    <string name="note">note</string>
    <string name="save">Save</string>
    <string name="Note">Note</string>
    <string name="_100">100</string>
    <string name="inr">INR</string>
    <string name="inr_new">INR</string>
    <string name="date">Date</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation">Navigation</string>
    <string name="navigation1">Navigation</string>
    <string name="notes">Notes</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="openDrawer">Open Navigation drawer</string>
    <string name="closeDrawer">closed navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vivek_mall">vivek mall</string>
    <string name="mallvivek1105_outlook_com">mallvivek1105@outlook.com</string>
</resources>