<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddExpenseActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="392dp"
        android:layout_height="104dp"
        android:layout_margin="10dp"
        app:contentPadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:text="@string/amount"
                android:textColor="@color/teal_200" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingTop="10dp"
                tools:ignore="LabelFor" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="364dp"
        android:layout_height="41dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/teal_200"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="381dp"
        android:layout_height="77dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"

            android:textColor="@color/teal_200"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingTop="10dp"

            tools:ignore="LabelFor" />


    </LinearLayout>

    <RadioButton
        android:id="@+id/incomeRadio"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:text="@string/income"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/expenseRadio"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.217"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/expenseRadio"
        android:layout_width="99dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/expense"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Note"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="11dp" />

    <Button
        android:id="@+id/saveExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>